etapa3/y.output
Terminais sem uso na gramática

   TOKEN_ERROR


Estado 46 conflitos: 2 de deslocamento/redução
Estado 58 conflitos: 1 de deslocamento/redução
Estado 80 conflitos: 12 de deslocamento/redução
Estado 136 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: P $end

    1 P: PROGRAMA

    2 PROGRAMA: DECLARACOES

    3 DECLARACOES: DECLARACAO DECLARACOES
    4            | %empty

    5 DECLARACAO: FUNCOES
    6           | VARIAVEL_GLOBAL ';'

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' TIPO VAR_GLOBAL_INIT_VEC

    8 VAR_GLOBAL_INIT_VEC: VALOR
    9                    | '[' LIT_INTEGER ']' VALOR_INICIALIZACAO_VETOR

   10 VALOR: LIT_INTEGER
   11      | LIT_REAL
   12      | LIT_CHAR

   13 VALOR_INICIALIZACAO_VETOR: VALOR VALOR_INICIALIZACAO_VETOR
   14                          | %empty

   15 TIPO: KW_BYTE
   16     | KW_SHORT
   17     | KW_LONG
   18     | KW_FLOAT
   19     | KW_DOUBLE

   20 FUNCOES: CABECALHO CORPO

   21 CABECALHO: TIPO TK_IDENTIFIER '(' LISTA_PARAMETROS ')'

   22 LISTA_PARAMETROS: TIPO TK_IDENTIFIER MAIS_PARAMETROS
   23                 | %empty

   24 MAIS_PARAMETROS: ',' TIPO TK_IDENTIFIER MAIS_PARAMETROS
   25                | %empty

   26 CORPO: COMANDO ';'

   27 BLOCO_COMANDOS: '{' LISTA_COMANDOS '}'

   28 LISTA_COMANDOS: COMANDO ';' LISTA_COMANDOS
   29               | %empty

   30 COMANDO: ATRIBUICAO
   31        | CONTROLE_FLUXO
   32        | READ
   33        | PRINT
   34        | RETURN
   35        | BLOCO_COMANDOS
   36        | %empty

   37 ATRIBUICAO: TK_IDENTIFIER '=' EXPRESSAO
   38           | TK_IDENTIFIER '#' EXPRESSAO '=' EXPRESSAO

   39 READ: KW_READ TK_IDENTIFIER

   40 PRINT: KW_PRINT LISTA_ELEMENTOS_PRINT

   41 LISTA_ELEMENTOS_PRINT: ELEMENTO_PRINT LISTA_ELEMENTOS_PRINT
   42                      | ELEMENTO_PRINT

   43 ELEMENTO_PRINT: LIT_STRING
   44               | EXPRESSAO

   45 RETURN: KW_RETURN EXPRESSAO

   46 EXPRESSAO: TK_IDENTIFIER
   47          | TK_IDENTIFIER '[' EXPRESSAO ']'
   48          | TK_IDENTIFIER '(' LISTA_FUNCAO_PARAMETROS ')'
   49          | '-' EXPRESSAO
   50          | LIT_INTEGER
   51          | LIT_REAL
   52          | LIT_CHAR
   53          | '(' EXPRESSAO ')'
   54          | '[' EXPRESSAO ']'
   55          | EXPRESSAO '+' EXPRESSAO
   56          | EXPRESSAO '-' EXPRESSAO
   57          | EXPRESSAO '*' EXPRESSAO
   58          | EXPRESSAO '/' EXPRESSAO
   59          | EXPRESSAO '>' EXPRESSAO
   60          | EXPRESSAO '<' EXPRESSAO
   61          | EXPRESSAO OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO OPERATOR_OR EXPRESSAO
   67          | '!' EXPRESSAO

   68 LISTA_FUNCAO_PARAMETROS: EXPRESSAO ',' LISTA_FUNCAO_PARAMETROS
   69                        | EXPRESSAO
   70                        | %empty

   71 CONTROLE_FLUXO: WHEN_THEN
   72               | WHEN_THEN_ELSE
   73               | FOR
   74               | WHILE

   75 WHEN_THEN: KW_WHEN '(' EXPRESSAO ')' KW_THEN COMANDO

   76 WHEN_THEN_ELSE: KW_WHEN '(' EXPRESSAO ')' KW_THEN COMANDO KW_ELSE COMANDO

   77 WHILE: KW_WHILE '(' EXPRESSAO ')' COMANDO

   78 FOR: KW_FOR '(' TK_IDENTIFIER '=' EXPRESSAO KW_TO EXPRESSAO ')' COMANDO


Terminais, com as regras onde eles aparecem

$end (0) 0
'!' (33) 67
'#' (35) 38
'(' (40) 21 48 53 75 76 77 78
')' (41) 21 48 53 75 76 77 78
'*' (42) 57
'+' (43) 55
',' (44) 24 68
'-' (45) 49 56
'/' (47) 58
':' (58) 7
';' (59) 6 26 28
'<' (60) 60
'=' (61) 37 38 78
'>' (62) 59
'[' (91) 9 47 54
']' (93) 9 47 54
'{' (123) 27
'}' (125) 27
error (256)
KW_TO (258) 78
KW_BYTE (259) 15
KW_SHORT (260) 16
KW_LONG (261) 17
KW_FLOAT (262) 18
KW_DOUBLE (263) 19
KW_WHEN (264) 75 76
KW_THEN (265) 75 76
KW_ELSE (266) 76
KW_WHILE (267) 77
KW_FOR (268) 78
KW_READ (269) 39
KW_RETURN (270) 45
KW_PRINT (271) 40
OPERATOR_LE (272) 61
OPERATOR_GE (273) 62
OPERATOR_EQ (274) 63
OPERATOR_NE (275) 64
OPERATOR_AND (276) 65
OPERATOR_OR (277) 66
TK_IDENTIFIER (278) 7 21 22 24 37 38 39 46 47 48 78
LIT_INTEGER (279) 9 10 50
LIT_REAL (280) 11 51
LIT_CHAR (281) 12 52
LIT_STRING (282) 43
TOKEN_ERROR (283)


Não terminais com as regras onde eles aparecem

$accept (47)
    à esquerda: 0
P (48)
    à esquerda: 1, à direita: 0
PROGRAMA (49)
    à esquerda: 2, à direita: 1
DECLARACOES (50)
    à esquerda: 3 4, à direita: 2 3
DECLARACAO (51)
    à esquerda: 5 6, à direita: 3
VARIAVEL_GLOBAL (52)
    à esquerda: 7, à direita: 6
VAR_GLOBAL_INIT_VEC (53)
    à esquerda: 8 9, à direita: 7
VALOR (54)
    à esquerda: 10 11 12, à direita: 8 13
VALOR_INICIALIZACAO_VETOR (55)
    à esquerda: 13 14, à direita: 9 13
TIPO (56)
    à esquerda: 15 16 17 18 19, à direita: 7 21 22 24
FUNCOES (57)
    à esquerda: 20, à direita: 5
CABECALHO (58)
    à esquerda: 21, à direita: 20
LISTA_PARAMETROS (59)
    à esquerda: 22 23, à direita: 21
MAIS_PARAMETROS (60)
    à esquerda: 24 25, à direita: 22 24
CORPO (61)
    à esquerda: 26, à direita: 20
BLOCO_COMANDOS (62)
    à esquerda: 27, à direita: 35
LISTA_COMANDOS (63)
    à esquerda: 28 29, à direita: 27 28
COMANDO (64)
    à esquerda: 30 31 32 33 34 35 36, à direita: 26 28 75 76 77 78
ATRIBUICAO (65)
    à esquerda: 37 38, à direita: 30
READ (66)
    à esquerda: 39, à direita: 32
PRINT (67)
    à esquerda: 40, à direita: 33
LISTA_ELEMENTOS_PRINT (68)
    à esquerda: 41 42, à direita: 40 41
ELEMENTO_PRINT (69)
    à esquerda: 43 44, à direita: 41 42
RETURN (70)
    à esquerda: 45, à direita: 34
EXPRESSAO (71)
    à esquerda: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67, à direita: 37 38 44 45 47 49 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 75 76 77 78
LISTA_FUNCAO_PARAMETROS (72)
    à esquerda: 68 69 70, à direita: 48 68
CONTROLE_FLUXO (73)
    à esquerda: 71 72 73 74, à direita: 31
WHEN_THEN (74)
    à esquerda: 75, à direita: 71
WHEN_THEN_ELSE (75)
    à esquerda: 76, à direita: 72
WHILE (76)
    à esquerda: 77, à direita: 74
FOR (77)
    à esquerda: 78, à direita: 73


Estado 0

    0 $accept: . P $end

    KW_BYTE        deslocar, e ir ao estado 1
    KW_SHORT       deslocar, e ir ao estado 2
    KW_LONG        deslocar, e ir ao estado 3
    KW_FLOAT       deslocar, e ir ao estado 4
    KW_DOUBLE      deslocar, e ir ao estado 5
    TK_IDENTIFIER  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 4 (DECLARACOES)

    P                ir ao estado 7
    PROGRAMA         ir ao estado 8
    DECLARACOES      ir ao estado 9
    DECLARACAO       ir ao estado 10
    VARIAVEL_GLOBAL  ir ao estado 11
    TIPO             ir ao estado 12
    FUNCOES          ir ao estado 13
    CABECALHO        ir ao estado 14


Estado 1

   15 TIPO: KW_BYTE .

    $padrão  reduzir usando a regra 15 (TIPO)


Estado 2

   16 TIPO: KW_SHORT .

    $padrão  reduzir usando a regra 16 (TIPO)


Estado 3

   17 TIPO: KW_LONG .

    $padrão  reduzir usando a regra 17 (TIPO)


Estado 4

   18 TIPO: KW_FLOAT .

    $padrão  reduzir usando a regra 18 (TIPO)


Estado 5

   19 TIPO: KW_DOUBLE .

    $padrão  reduzir usando a regra 19 (TIPO)


Estado 6

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER . ':' TIPO VAR_GLOBAL_INIT_VEC

    ':'  deslocar, e ir ao estado 15


Estado 7

    0 $accept: P . $end

    $end  deslocar, e ir ao estado 16


Estado 8

    1 P: PROGRAMA .

    $padrão  reduzir usando a regra 1 (P)


Estado 9

    2 PROGRAMA: DECLARACOES .

    $padrão  reduzir usando a regra 2 (PROGRAMA)


Estado 10

    3 DECLARACOES: DECLARACAO . DECLARACOES

    KW_BYTE        deslocar, e ir ao estado 1
    KW_SHORT       deslocar, e ir ao estado 2
    KW_LONG        deslocar, e ir ao estado 3
    KW_FLOAT       deslocar, e ir ao estado 4
    KW_DOUBLE      deslocar, e ir ao estado 5
    TK_IDENTIFIER  deslocar, e ir ao estado 6

    $padrão  reduzir usando a regra 4 (DECLARACOES)

    DECLARACOES      ir ao estado 17
    DECLARACAO       ir ao estado 10
    VARIAVEL_GLOBAL  ir ao estado 11
    TIPO             ir ao estado 12
    FUNCOES          ir ao estado 13
    CABECALHO        ir ao estado 14


Estado 11

    6 DECLARACAO: VARIAVEL_GLOBAL . ';'

    ';'  deslocar, e ir ao estado 18


Estado 12

   21 CABECALHO: TIPO . TK_IDENTIFIER '(' LISTA_PARAMETROS ')'

    TK_IDENTIFIER  deslocar, e ir ao estado 19


Estado 13

    5 DECLARACAO: FUNCOES .

    $padrão  reduzir usando a regra 5 (DECLARACAO)


Estado 14

   20 FUNCOES: CABECALHO . CORPO

    KW_WHEN        deslocar, e ir ao estado 20
    KW_WHILE       deslocar, e ir ao estado 21
    KW_FOR         deslocar, e ir ao estado 22
    KW_READ        deslocar, e ir ao estado 23
    KW_RETURN      deslocar, e ir ao estado 24
    KW_PRINT       deslocar, e ir ao estado 25
    TK_IDENTIFIER  deslocar, e ir ao estado 26
    '{'            deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 36 (COMANDO)

    CORPO           ir ao estado 28
    BLOCO_COMANDOS  ir ao estado 29
    COMANDO         ir ao estado 30
    ATRIBUICAO      ir ao estado 31
    READ            ir ao estado 32
    PRINT           ir ao estado 33
    RETURN          ir ao estado 34
    CONTROLE_FLUXO  ir ao estado 35
    WHEN_THEN       ir ao estado 36
    WHEN_THEN_ELSE  ir ao estado 37
    WHILE           ir ao estado 38
    FOR             ir ao estado 39


Estado 15

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' . TIPO VAR_GLOBAL_INIT_VEC

    KW_BYTE    deslocar, e ir ao estado 1
    KW_SHORT   deslocar, e ir ao estado 2
    KW_LONG    deslocar, e ir ao estado 3
    KW_FLOAT   deslocar, e ir ao estado 4
    KW_DOUBLE  deslocar, e ir ao estado 5

    TIPO  ir ao estado 40


Estado 16

    0 $accept: P $end .

    $padrão  aceitar


Estado 17

    3 DECLARACOES: DECLARACAO DECLARACOES .

    $padrão  reduzir usando a regra 3 (DECLARACOES)


Estado 18

    6 DECLARACAO: VARIAVEL_GLOBAL ';' .

    $padrão  reduzir usando a regra 6 (DECLARACAO)


Estado 19

   21 CABECALHO: TIPO TK_IDENTIFIER . '(' LISTA_PARAMETROS ')'

    '('  deslocar, e ir ao estado 41


Estado 20

   75 WHEN_THEN: KW_WHEN . '(' EXPRESSAO ')' KW_THEN COMANDO
   76 WHEN_THEN_ELSE: KW_WHEN . '(' EXPRESSAO ')' KW_THEN COMANDO KW_ELSE COMANDO

    '('  deslocar, e ir ao estado 42


Estado 21

   77 WHILE: KW_WHILE . '(' EXPRESSAO ')' COMANDO

    '('  deslocar, e ir ao estado 43


Estado 22

   78 FOR: KW_FOR . '(' TK_IDENTIFIER '=' EXPRESSAO KW_TO EXPRESSAO ')' COMANDO

    '('  deslocar, e ir ao estado 44


Estado 23

   39 READ: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  deslocar, e ir ao estado 45


Estado 24

   45 RETURN: KW_RETURN . EXPRESSAO

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 54


Estado 25

   40 PRINT: KW_PRINT . LISTA_ELEMENTOS_PRINT

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    LIT_STRING     deslocar, e ir ao estado 55
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    LISTA_ELEMENTOS_PRINT  ir ao estado 56
    ELEMENTO_PRINT         ir ao estado 57
    EXPRESSAO              ir ao estado 58


Estado 26

   37 ATRIBUICAO: TK_IDENTIFIER . '=' EXPRESSAO
   38           | TK_IDENTIFIER . '#' EXPRESSAO '=' EXPRESSAO

    '='  deslocar, e ir ao estado 59
    '#'  deslocar, e ir ao estado 60


Estado 27

   27 BLOCO_COMANDOS: '{' . LISTA_COMANDOS '}'

    KW_WHEN        deslocar, e ir ao estado 20
    KW_WHILE       deslocar, e ir ao estado 21
    KW_FOR         deslocar, e ir ao estado 22
    KW_READ        deslocar, e ir ao estado 23
    KW_RETURN      deslocar, e ir ao estado 24
    KW_PRINT       deslocar, e ir ao estado 25
    TK_IDENTIFIER  deslocar, e ir ao estado 26
    '{'            deslocar, e ir ao estado 27

    ';'       reduzir usando a regra 36 (COMANDO)
    $padrão  reduzir usando a regra 29 (LISTA_COMANDOS)

    BLOCO_COMANDOS  ir ao estado 29
    LISTA_COMANDOS  ir ao estado 61
    COMANDO         ir ao estado 62
    ATRIBUICAO      ir ao estado 31
    READ            ir ao estado 32
    PRINT           ir ao estado 33
    RETURN          ir ao estado 34
    CONTROLE_FLUXO  ir ao estado 35
    WHEN_THEN       ir ao estado 36
    WHEN_THEN_ELSE  ir ao estado 37
    WHILE           ir ao estado 38
    FOR             ir ao estado 39


Estado 28

   20 FUNCOES: CABECALHO CORPO .

    $padrão  reduzir usando a regra 20 (FUNCOES)


Estado 29

   35 COMANDO: BLOCO_COMANDOS .

    $padrão  reduzir usando a regra 35 (COMANDO)


Estado 30

   26 CORPO: COMANDO . ';'

    ';'  deslocar, e ir ao estado 63


Estado 31

   30 COMANDO: ATRIBUICAO .

    $padrão  reduzir usando a regra 30 (COMANDO)


Estado 32

   32 COMANDO: READ .

    $padrão  reduzir usando a regra 32 (COMANDO)


Estado 33

   33 COMANDO: PRINT .

    $padrão  reduzir usando a regra 33 (COMANDO)


Estado 34

   34 COMANDO: RETURN .

    $padrão  reduzir usando a regra 34 (COMANDO)


Estado 35

   31 COMANDO: CONTROLE_FLUXO .

    $padrão  reduzir usando a regra 31 (COMANDO)


Estado 36

   71 CONTROLE_FLUXO: WHEN_THEN .

    $padrão  reduzir usando a regra 71 (CONTROLE_FLUXO)


Estado 37

   72 CONTROLE_FLUXO: WHEN_THEN_ELSE .

    $padrão  reduzir usando a regra 72 (CONTROLE_FLUXO)


Estado 38

   74 CONTROLE_FLUXO: WHILE .

    $padrão  reduzir usando a regra 74 (CONTROLE_FLUXO)


Estado 39

   73 CONTROLE_FLUXO: FOR .

    $padrão  reduzir usando a regra 73 (CONTROLE_FLUXO)


Estado 40

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' TIPO . VAR_GLOBAL_INIT_VEC

    LIT_INTEGER  deslocar, e ir ao estado 64
    LIT_REAL     deslocar, e ir ao estado 65
    LIT_CHAR     deslocar, e ir ao estado 66
    '['          deslocar, e ir ao estado 67

    VAR_GLOBAL_INIT_VEC  ir ao estado 68
    VALOR                ir ao estado 69


Estado 41

   21 CABECALHO: TIPO TK_IDENTIFIER '(' . LISTA_PARAMETROS ')'

    KW_BYTE    deslocar, e ir ao estado 1
    KW_SHORT   deslocar, e ir ao estado 2
    KW_LONG    deslocar, e ir ao estado 3
    KW_FLOAT   deslocar, e ir ao estado 4
    KW_DOUBLE  deslocar, e ir ao estado 5

    $padrão  reduzir usando a regra 23 (LISTA_PARAMETROS)

    TIPO              ir ao estado 70
    LISTA_PARAMETROS  ir ao estado 71


Estado 42

   75 WHEN_THEN: KW_WHEN '(' . EXPRESSAO ')' KW_THEN COMANDO
   76 WHEN_THEN_ELSE: KW_WHEN '(' . EXPRESSAO ')' KW_THEN COMANDO KW_ELSE COMANDO

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 72


Estado 43

   77 WHILE: KW_WHILE '(' . EXPRESSAO ')' COMANDO

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 73


Estado 44

   78 FOR: KW_FOR '(' . TK_IDENTIFIER '=' EXPRESSAO KW_TO EXPRESSAO ')' COMANDO

    TK_IDENTIFIER  deslocar, e ir ao estado 74


Estado 45

   39 READ: KW_READ TK_IDENTIFIER .

    $padrão  reduzir usando a regra 39 (READ)


Estado 46

   46 EXPRESSAO: TK_IDENTIFIER .
   47          | TK_IDENTIFIER . '[' EXPRESSAO ']'
   48          | TK_IDENTIFIER . '(' LISTA_FUNCAO_PARAMETROS ')'

    '['  deslocar, e ir ao estado 75
    '('  deslocar, e ir ao estado 76

    '['       [reduzir usando a regra 46 (EXPRESSAO)]
    '('       [reduzir usando a regra 46 (EXPRESSAO)]
    $padrão  reduzir usando a regra 46 (EXPRESSAO)


Estado 47

   50 EXPRESSAO: LIT_INTEGER .

    $padrão  reduzir usando a regra 50 (EXPRESSAO)


Estado 48

   51 EXPRESSAO: LIT_REAL .

    $padrão  reduzir usando a regra 51 (EXPRESSAO)


Estado 49

   52 EXPRESSAO: LIT_CHAR .

    $padrão  reduzir usando a regra 52 (EXPRESSAO)


Estado 50

   49 EXPRESSAO: '-' . EXPRESSAO

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 77


Estado 51

   54 EXPRESSAO: '[' . EXPRESSAO ']'

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 78


Estado 52

   53 EXPRESSAO: '(' . EXPRESSAO ')'

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 79


Estado 53

   67 EXPRESSAO: '!' . EXPRESSAO

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 80


Estado 54

   45 RETURN: KW_RETURN EXPRESSAO .
   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO

    OPERATOR_LE   deslocar, e ir ao estado 81
    OPERATOR_GE   deslocar, e ir ao estado 82
    OPERATOR_EQ   deslocar, e ir ao estado 83
    OPERATOR_NE   deslocar, e ir ao estado 84
    OPERATOR_AND  deslocar, e ir ao estado 85
    OPERATOR_OR   deslocar, e ir ao estado 86
    '<'           deslocar, e ir ao estado 87
    '>'           deslocar, e ir ao estado 88
    '+'           deslocar, e ir ao estado 89
    '-'           deslocar, e ir ao estado 90
    '*'           deslocar, e ir ao estado 91
    '/'           deslocar, e ir ao estado 92

    $padrão  reduzir usando a regra 45 (RETURN)


Estado 55

   43 ELEMENTO_PRINT: LIT_STRING .

    $padrão  reduzir usando a regra 43 (ELEMENTO_PRINT)


Estado 56

   40 PRINT: KW_PRINT LISTA_ELEMENTOS_PRINT .

    $padrão  reduzir usando a regra 40 (PRINT)


Estado 57

   41 LISTA_ELEMENTOS_PRINT: ELEMENTO_PRINT . LISTA_ELEMENTOS_PRINT
   42                      | ELEMENTO_PRINT .

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    LIT_STRING     deslocar, e ir ao estado 55
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 42 (LISTA_ELEMENTOS_PRINT)

    LISTA_ELEMENTOS_PRINT  ir ao estado 93
    ELEMENTO_PRINT         ir ao estado 57
    EXPRESSAO              ir ao estado 58


Estado 58

   44 ELEMENTO_PRINT: EXPRESSAO .
   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO

    OPERATOR_LE   deslocar, e ir ao estado 81
    OPERATOR_GE   deslocar, e ir ao estado 82
    OPERATOR_EQ   deslocar, e ir ao estado 83
    OPERATOR_NE   deslocar, e ir ao estado 84
    OPERATOR_AND  deslocar, e ir ao estado 85
    OPERATOR_OR   deslocar, e ir ao estado 86
    '<'           deslocar, e ir ao estado 87
    '>'           deslocar, e ir ao estado 88
    '+'           deslocar, e ir ao estado 89
    '-'           deslocar, e ir ao estado 90
    '*'           deslocar, e ir ao estado 91
    '/'           deslocar, e ir ao estado 92

    '-'       [reduzir usando a regra 44 (ELEMENTO_PRINT)]
    $padrão  reduzir usando a regra 44 (ELEMENTO_PRINT)


Estado 59

   37 ATRIBUICAO: TK_IDENTIFIER '=' . EXPRESSAO

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 94


Estado 60

   38 ATRIBUICAO: TK_IDENTIFIER '#' . EXPRESSAO '=' EXPRESSAO

    TK_IDENTIFIER  deslocar, e ir ao estado 46
    LIT_INTEGER    deslocar, e ir ao estado 47
    LIT_REAL       deslocar, e ir ao estado 48
    LIT_CHAR       deslocar, e ir ao estado 49
    '-'            deslocar, e ir ao estado 50
    '['            deslocar, e ir ao estado 51
    '('            deslocar, e ir ao estado 52
    '!'            deslocar, e ir ao estado 53

    EXPRESSAO  ir ao estado 95


Estado 61

   27 BLOCO_COMANDOS: '{' LISTA_COMANDOS . '}'

    '}'  deslocar, e ir ao estado 96


Estado 62

   28 LISTA_COMANDOS: COMANDO . ';' LISTA_COMANDOS

    ';'  deslocar, e ir ao estado 97


Estado 63

   26 CORPO: COMANDO ';' .

    $padrão  reduzir usando a regra 26 (CORPO)


Estado 64

   10 VALOR: LIT_INTEGER .

    $padrão  reduzir usando a regra 10 (VALOR)


Estado 65

   11 VALOR: LIT_REAL .

    $padrão  reduzir usando a regra 11 (VALOR)


Estado 66

   12 VALOR: LIT_CHAR .

    $padrão  reduzir usando a regra 12 (VALOR)


Estado 67

    9 VAR_GLOBAL_INIT_VEC: '[' . LIT_INTEGER ']' VALOR_INICIALIZACAO_VETOR

    LIT_INTEGER  deslocar, e ir ao estado 98


Estado 68

    7 VARIAVEL_GLOBAL: TK_IDENTIFIER ':' TIPO VAR_GLOBAL_INIT_VEC .

    $padrão  reduzir usando a regra 7 (VARIAVEL_GLOBAL)


Estado 69

    8 VAR_GLOBAL_INIT_VEC: VALOR .

    $padrão  reduzir usando a regra 8 (VAR_GLOBAL_INIT_VEC)


Estado 70

   22 LISTA_PARAMETROS: TIPO . TK_IDENTIFIER MAIS_PARAMETROS

    TK_IDENTIFIER  deslocar, e ir ao estado 99


Estado 71

   21 CABECALHO: TIPO TK_IDENTIFIER '(' LISTA_PARAMETROS . ')'

    ')'  deslocar, e ir ao estado 100


Estado 72

   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO
   75 WHEN_THEN: KW_WHEN '(' EXPRESSAO . ')' KW_THEN COMANDO
   76 WHEN_THEN_ELSE: KW_WHEN '(' EXPRESSAO . ')' KW_THEN COMANDO KW_ELSE COMANDO

    OPERATOR_LE   deslocar, e ir ao estado 81
    OPERATOR_GE   deslocar, e ir ao estado 82
    OPERATOR_EQ   deslocar, e ir ao estado 83
    OPERATOR_NE   deslocar, e ir ao estado 84
    OPERATOR_AND  deslocar, e ir ao estado 85
    OPERATOR_OR   deslocar, e ir ao estado 86
    '<'           deslocar, e ir ao estado 87
    '>'           deslocar, e ir ao estado 88
    '+'           deslocar, e ir ao estado 89
    '-'           deslocar, e ir ao estado 90
    '*'           deslocar, e ir ao estado 91
    '/'           deslocar, e ir ao estado 92
    ')'           deslocar, e ir ao estado 101


Estado 73

   55 EXPRESSAO: EXPRESSAO . '+' EXPRESSAO
   56          | EXPRESSAO . '-' EXPRESSAO
   57          | EXPRESSAO . '*' EXPRESSAO
   58          | EXPRESSAO . '/' EXPRESSAO
   59          | EXPRESSAO . '>' EXPRESSAO
   60          | EXPRESSAO . '<' EXPRESSAO
   61          | EXPRESSAO . OPERATOR_LE EXPRESSAO
   62          | EXPRESSAO . OPERATOR_GE EXPRESSAO
   63          | EXPRESSAO . OPERATOR_EQ EXPRESSAO
   64          | EXPRESSAO . OPERATOR_NE EXPRESSAO
   65          | EXPRESSAO . OPERATOR_AND EXPRESSAO
   66          | EXPRESSAO . OPERATOR_OR EXPRESSAO
   77 WHILE: KW_WHILE '(' EXPRESSAO . ')' COMANDO
